# regbot

./: .example.env  .gitignore  Dockerfile  docker-compose.dev.yaml  docker-compose.yaml  makefile  manage.py  pyproject.toml
config/: asgi.py  celery.py  urls.py
config/settings/: base.py
deploy/: loki.yaml
deploy/grafana/: grafana.env
deploy/gunicorn/: gunicorn.conf.py  gunicorn.env
deploy/prometheus/: prometheus.yml
deploy/statsd-exporter/: statsd.conf
regbot/: admin.py  apps.py  urls.py
regbot/api/: admin.py  apps.py  models.py  urls.py  views.py
regbot/api/migrations/: 0001_initial.py  0002_alter_reservedtime_phone_number.py  0003_reservedtime_tg_id.py
regbot/api/telegram/: bot.py  widgets.py
regbot/api/telegram/dialogs/: crud_reg.py  main.py
regbot/api/telegram/routers/: main.py
regbot/migrations/: 0001_initial.py
regbot/telegram/: bot.py  utils.py  validators.py  widgets.py
regbot/telegram/dialogs/: crud_reg.py  main.py
regbot/telegram/routers/: main.py
regbot/users/: admin.py  apps.py  filters.py  models.py  serializers.py  urls.py  views.py
regbot/users/migrations/: 0001_initial.py
